<resources>
    <string name="app_name">MovApps</string>
    <string name="lewati_pekenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tayang</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan E-wallet untuk\ntransaksi tiket nonton</string>
    <string name="mulai">Mulai</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="photo">Photo</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="selamat_datang">Selamat Datang<br />John Kenny</string>
    <string name="simpan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="check_out">Check Out</string>
    <string name="date_time">Date and Time</string>
    <string name="when">When</string>
    <string name="cinema">Cinema</string>
    <string name="seatb1">Seat No. B1</string>
    <string name="seatb2">Seat No. B2</string>
    <string name="items">Items</string>
    <string name="total">Total</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="mywallet">My Wallet</string>
    <string name="history">My History</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saldo">Saldo</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="home">Home</string>
    <string name="happy_watching">Happy Watching!!</string>
    <string name="happy_watching_desc">Tiket berhasil dibeli dan\n selamat menikmati film!</string>
</resources>